--- a/www/index.html
+++ b/www/index.html
@@ -9,8 +9,8 @@
     <link href="css/style.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
-    <link href="css/ionic.app.css" rel="stylesheet">
-    -->
+         <link href="css/ionic.app.css" rel="stylesheet">
+       -->
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
@@ -27,8 +27,18 @@
       <ion-header-bar class="bar-stable">
         <h1 class="title">Ionic Blank Starter</h1>
       </ion-header-bar>
+
       <ion-content>
+        <div class="list">
+          <div class="item item-input-inset">
+            <label class="item-input-wrapper">
+              <input type="text">
+            </label>
+            <button class="button button-small">Add</button>
+          </div>
+        </div>
       </ion-content>
+
     </ion-pane>
   </body>
 </html>
