--- a/www/index.html
+++ b/www/index.html
@@ -9,8 +9,8 @@
     <link href="css/style.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
-         <link href="css/ionic.app.css" rel="stylesheet">
-       -->
+    <link href="css/ionic.app.css" rel="stylesheet">
+    -->
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
@@ -20,35 +20,10 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="js/controllers.js"></script>
   </head>
+
   <body ng-app="starter">
-
-    <ion-pane>
-      <ion-header-bar class="bar-stable">
-        <h1 class="title">Ionic Blank Starter</h1>
-      </ion-header-bar>
-
-      <ion-content ng-controller="BucketListController">
-
-        <div class="list">
-          <div class="item item-input-inset">
-            <label class="item-input-wrapper">
-              <input type="text" ng-model="bucketListItem.title">
-            </label>
-            <button class="button button-small" ng-click="addBucketListItem()">Add</button>
-          </div>
-        </div>
-
-        <ion-list>
-          <ion-item ng-repeat="item in bucketListItems">
-            <h2>{{item.title}}</h2>
-            <ion-option-button class="button-assertive" ng-click="delBucketListItem($index)">Delete</ion-option-button>
-          </ion-item>
-        </ion-list>
-
-
-      </ion-content>
-
-    </ion-pane>
+    <ion-nav-view></ion-nav-view>
   </body>
 </html>
